Order updated with limits and fixed on iPhone screens

--- a/plugins/glidera/less/app.less
+++ b/plugins/glidera/less/app.less
@@ -171,11 +171,6 @@ body {
         border-color: white;
       }
     }
-
-    .exchange-rate {
-      padding-top: 6px;
-      font-size: 20px;
-    }
   }
 
   .exchange-balances {
@@ -266,6 +261,18 @@ body {
     }
   }
 
+  .order-limits {
+    text-align: right;
+
+    .limit-label {
+
+    }
+    .limit-data {
+      color: @ab-green;
+
+    }
+  }
+
   .order-review {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -330,7 +337,7 @@ body {
   }
 
   .live-price-rate {
-    font-size: 20px;
+    font-size: 17px;
 
     .price-rate-label {}
     .price-rate-data {
